objects/ObjectsSaveMode__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Object Save Mode - control of switching ON/OFF validations, processes, workflows and Trigger logic for given user who will run data fix.</description>
    <fields>
        <fullName>DisabledValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No validations will be executed when field is set to True</description>
        <label>Disabled Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FullLogicDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No validations, processes, workflows and triggers will be executed when field is set to True</description>
        <label>Full Logic Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No “dangerous” logic like creating  new tasks, update timelines or sending an email to the user will be disabled</description>
        <label>Safe</label>
        <type>Checkbox</type>
    </fields>
    <label>Objects Save Mode</label>
</CustomObject>